--- a/app/src/main/res/layout/ceps_recycler_view_layout.xml
+++ b/app/src/main/res/layout/ceps_recycler_view_layout.xml
@@ -28,14 +28,14 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tv_Logradouro"
+                android:id="@+id/tv_logradouro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Logradouro"
                 android:textColor="@color/white" />
 
             <TextView
-                android:id="@+id/tv_Localidade"
+                android:id="@+id/tv_localidade"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Localidade"
